syntax = "proto3";

import "agse-pki-csr-data.proto";


/** AGSE-PKI certificate. */
message AGSEPKICert {
	/** @see AGSEPKICSRData */
	required AGSEPKICSRData csrData = 1;

	/** Timestamp of certificate issuance. */
	required double timestamp = 2;
}
